resource-manifests/ingress/coit-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coit-frontend
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - frontend.k8slabs.tk
    secretName: frontendurl-cert
  rules:
  - host: frontend.k8slabs.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: coit-frontend-lb
            port:
              number: 80
